objects/vlocity_cmt__InventoryItem__c.object
<CustomObject>
    <fields>
        <fullName>vlocity_cmt__AccountId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Account</description>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Inventory Items (Account)</relationshipLabel>
        <relationshipName>Inventory_Items</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__Address__c</fullName>
        <label>Address</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__BillingAccountId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>ID of the account responsible for paying for the item.</description>
        <label>BillingAccountId</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Inventory Items (BillingAccountId)</relationshipLabel>
        <relationshipName>Inventory_Items2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__JSONAttribute__c</fullName>
        <label>JSONAttribute</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__LineNumber__c</fullName>
        <description>Line Number</description>
        <label>Line Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__PremiseId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Installed Premise</label>
        <referenceTo>vlocity_cmt__Premises__c</referenceTo>
        <relationshipLabel>Inventory Items</relationshipLabel>
        <relationshipName>InventoryItems</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__ProductId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Product</label>
        <referenceTo>Product2</referenceTo>
        <relationshipLabel>Inventory Items</relationshipLabel>
        <relationshipName>InventoryItems</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__ProvisioningStatus__c</fullName>
        <description>The current provisioning, or fulfillment, status of the inventory Item with values such as New, Active, Changed or Deleted.</description>
        <label>ProvisioningStatus</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__QualificationExpirationDate__c</fullName>
        <label>Qualification Expiration Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__SerialNumber__c</fullName>
        <externalId>true</externalId>
        <label>Serial Number</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__ServiceAccountId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>ID of the account that identifies the service location or subscriber that is the user of the service.</description>
        <label>ServiceAccountId</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Inventory Items (ServiceAccountId)</relationshipLabel>
        <relationshipName>Inventory_Items1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>vlocity_cmt__ServicePointId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Installed Service Point</label>
        <referenceTo>vlocity_cmt__ServicePoint__c</referenceTo>
        <relationshipLabel>Inventory Items</relationshipLabel>
        <relationshipName>InventoryItems</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Inventory Item</label>
    <listViews>
        <fullName>vlocity_cmt__All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Inventory Item Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Inventory Items</pluralLabel>
    <recordTypes>
        <fullName>vlocity_cmt__InventoryItem</fullName>
        <active>true</active>
        <label>Inventory Item</label>
    </recordTypes>
    <recordTypes>
        <fullName>vlocity_cmt__ServiceQualificationResult</fullName>
        <active>true</active>
        <label>Service Qualification Result</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>